# BuildSystem

./: Build_System.pptx
tas_group_test/: .hgsub  .hgsubstate  CMakeLists.txt  configure.bat
tas_group_test/.hg/: dirstate  last-message.txt  undo.backup.dirstate
tas_group_test/.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
tas_group_test/.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.phaseroots
tas_group_test/.hg/store/data/: readme.txt.i  ~2ehgsub.i  ~2ehgsubstate.i
tas_group_test/cmake_common/: export.cmake  publish.cmake
tas_group_test/cmake_common/.hg/: dirstate  hgrc  last-message.txt  undo.backup.dirstate  undo.desc
tas_group_test/cmake_common/.hg/cache/: branch2-served  rbc-revs-v1
tas_group_test/cmake_common/.hg/cache/storehash/: cb845d86cea1
tas_group_test/cmake_common/.hg/store/: 00changelog.i  00manifest.i  fncache  undo.backup.fncache  undo.phaseroots
tas_group_test/cmake_common/.hg/store/data/: export.cmake.i  publish.cmake.i
tas_group_test/common/: CMakeLists.txt  dependency.txt
tas_group_test/common/.hg/: dirstate  hgrc  thgstatus  undo.dirstate
tas_group_test/common/.hg/cache/: branch2-base  branch2-served  rbc-revs-v1  tags2-visible
tas_group_test/common/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
tas_group_test/common/.hg/store/data/: _c_make_lists.txt.i  dependency.txt.i  ~2ehgsub.i  ~2ehgsubstate.i
tas_group_test/common/.hg/store/data/common__net/: _c_make_lists.txt.i
tas_group_test/common/.hg/store/data/common__net/headers/: common__net.h.i
tas_group_test/common/.hg/store/data/common__net/src/: common__net.cpp.i
tas_group_test/common/.hg/store/data/http/: _c_make_lists.txt.i
tas_group_test/common/.hg/store/data/http/client/: _c_make_lists.txt.i
tas_group_test/common/.hg/store/data/http/server/: _c_make_lists.txt.i
tas_group_test/common/.hg/store/data/lib_t_c_p_pinger/: _c_make_lists.txt.i
tas_group_test/common/.hg/store/data/lib_t_c_p_pinger/headers/: lib_t_c_p_pinger.h.i
tas_group_test/common/.hg/store/data/lib_t_c_p_pinger/src/: lib_t_c_p_pinger.cpp.i
tas_group_test/common/common_net/: CMakeLists.txt
tas_group_test/common/common_net/src/: common_net.cpp
tas_group_test/common/http/: CMakeLists.txt
tas_group_test/common/http/client/: CMakeLists.txt
tas_group_test/common/http/client/src/: client.cpp
tas_group_test/common/http/server/: CMakeLists.txt
tas_group_test/common/http/server/src/: server.cpp
tas_group_test/common/interface_headers/common/common_net/: common_net.h
tas_group_test/common/interface_headers/common/http/client/: client.h
tas_group_test/common/interface_headers/common/http/server/: server.h
tas_group_test/common/interface_headers/common/libTCPPinger/: libTCPPinger.h
tas_group_test/common/libTCPPinger/: CMakeLists.txt
tas_group_test/common/libTCPPinger/src/: libTCPPinger.cpp
tas_group_test/common_lib/: CMakeLists.txt
tas_group_test/common_lib/.hg/: dirstate  hgrc  last-message.txt  undo.dirstate
tas_group_test/common_lib/.hg/cache/: branch2-base  branch2-served  rbc-revs-v1  tags2-visible
tas_group_test/common_lib/.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.backup.fncache  undo.backup.phaseroots
tas_group_test/common_lib/.hg/store/data/: _c_make_lists.txt.i  readme.txt.i  ~2ehgsub.i  ~2ehgsubstate.i
tas_group_test/common_lib/.hg/store/data/headers/: common__lib.h.i
tas_group_test/common_lib/.hg/store/data/src/: common__lib.cpp.i
tas_group_test/common_lib/interface_headers/common_lib/: common_lib.h
tas_group_test/common_lib/src/: common_lib.cpp
tas_group_test/phoneparser/: CMakeLists.txt
tas_group_test/phoneparser/.hg/: dirstate  hgrc  last-message.txt  undo.dirstate
tas_group_test/phoneparser/.hg/cache/: branch2-base  branch2-served  rbc-revs-v1  tags2-visible
tas_group_test/phoneparser/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
tas_group_test/phoneparser/.hg/store/data/: _c_make_lists.txt.i
tas_group_test/phoneparser/.hg/store/data/headers/: phoneparser.h.i
tas_group_test/phoneparser/.hg/store/data/src/: phoneparser.cpp.i
tas_group_test/phoneparser/interface_headers/phoneparser/: phoneparser.h
tas_group_test/phoneparser/src/: phoneparser.cpp
tas_group_test/tas/: CMakeLists.txt  dependency.txt  readme.txt
tas_group_test/tas/.hg/: dirstate  hgrc  undo.dirstate
tas_group_test/tas/.hg/cache/: branch2-base  branch2-served  rbc-revs-v1  tags2-visible
tas_group_test/tas/.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.backup.fncache  undo.phaseroots
tas_group_test/tas/.hg/store/data/: _c_make_lists.txt.i  dependency.txt.i  readme.txt.i  ~2ehgsubstate.i
tas_group_test/tas/.hg/store/data/src/: tas.cpp.i
tas_group_test/tas/src/: tas.cpp
tas_group_test/utils/: CMakeLists.txt  dependency.txt
tas_group_test/utils/.hg/: dirstate  hgrc  thgstatus  undo.dirstate
tas_group_test/utils/.hg/cache/: branch2-base  branch2-served  rbc-revs-v1  tags2-visible
tas_group_test/utils/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
tas_group_test/utils/.hg/store/data/: _c_make_lists.txt.i  dependency.txt.i  ~2ehgsub.i  ~2ehgsubstate.i
tas_group_test/utils/.hg/store/data/headers/: utils.h.i
tas_group_test/utils/.hg/store/data/src/: utils.cpp.i
tas_group_test/utils/interface_headers/utils/: utils.h
tas_group_test/utils/src/: utils.cpp
tas_group_test/xpdb/: CMakeLists.txt  dependency.txt
tas_group_test/xpdb/.hg/: dirstate  hgrc  last-message.txt  undo.dirstate
tas_group_test/xpdb/.hg/cache/: branch2-base  branch2-served  rbc-revs-v1  tags2-visible
tas_group_test/xpdb/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
tas_group_test/xpdb/.hg/store/data/: _c_make_lists.txt.i  dependency.txt.i  ~2ehgsub.i
tas_group_test/xpdb/.hg/store/data/headers/: xpdb.h.i
tas_group_test/xpdb/.hg/store/data/src/: xpdb.cpp.i
tas_group_test/xpdb/interface_headers/xpdb/: xpdb.h
tas_group_test/xpdb/src/: xpdb.cpp
(+34 files in other folders)
